--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div id="new-area">
 
         <h2><span class="congrats">Congratulations!</span></h2>
-        <h3>You have successfully brought tickets</h3>
+        <h3>You have successfully brought air tickets</h3>
         <h4>Thanks for purchasing tickets from us</h4>
 
 
